добавлены лайтбоксы для сертификатов

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 
 
 	<!-- Модальное окно звонок-->
-	<div class="modal fade" id="callBackModal" data-bs-keyboard="true" tabindex="-1" aria-labelledby="staticBackdropLabel"
+	<div class="modal fade index" id="callBackModal" data-bs-keyboard="true" tabindex="-1" aria-labelledby="staticBackdropLabel"
 		aria-hidden="true">
 		<div class="modal-dialog modal-dialog-centered">
 			<div class="modal-content">
@@ -242,7 +242,7 @@
 				</div>
 				<div class="modal-body">
 					<p>Мы перезвоним Вам,<br>как только получим заявку</p>
-					<form action="#" id="formCall" class="form-body">
+					<form action="#" id="formCall" class="form-body" method="post">
 						<div class="form-item">
 							<label for="formName" class="form-label">Ваше имя <span>*</span></label>
 							<input id="formName" type="text" name="name" class="form-input" required>
@@ -261,7 +261,7 @@
 	<!-- /Модальное окно звонок-->
 
 	<!-- Модальное окно обработка-->
-	<div class="modal fade" id="orderModal" data-bs-keyboard="true" tabindex="-1" aria-labelledby="staticBackdropLabel"
+	<div class="modal fade index" id="orderModal" data-bs-keyboard="true" tabindex="-1" aria-labelledby="staticBackdropLabel"
 		aria-hidden="true">
 		<div class="modal-dialog modal-dialog-centered">
 			<div class="modal-content">
@@ -271,7 +271,7 @@
 				</div>
 				<div class="modal-body">
 					<p>Мы перезвоним Вам,<br>как только получим заявку</p>
-					<form action="#" id="formCall" class="form-body">
+					<form action="#" id="formCall" class="form-body" method="post">
 						<div class="form-item">
 							<label for="formName" class="form-label">Ваше имя <span>*</span></label>
 							<input id="formName" type="text" name="name" class="form-input" required>
@@ -299,7 +299,7 @@
 	<!-- /Модальное окно обработка -->
 
 	<!-- Модальное окно срочная обработка-->
-	<div class="modal fade" id="rushOrderModal" data-bs-keyboard="true" tabindex="-1"
+	<div class="modal fade index" id="rushOrderModal" data-bs-keyboard="true" tabindex="-1"
 		aria-labelledby="staticBackdropLabel" aria-hidden="true">
 		<div class="modal-dialog modal-dialog-centered">
 			<div class="modal-content">
@@ -309,7 +309,7 @@
 				</div>
 				<div class="modal-body">
 					<p>Мы перезвоним Вам,<br>как только получим заявку</p>
-					<form action="#" id="formCall" class="form-body">
+					<form action="#" id="formCall" class="form-body" method="post">
 						<div class="form-item">
 							<label for="formName" class="form-label">Ваше имя <span>*</span></label>
 							<input id="formName" type="text" name="name" class="form-input" required>
