--- a/sertificats.html
+++ b/sertificats.html
@@ -1,51 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta http-equiv="X-UA-Compatible" content="ie=edge">
-		<title>Калинка-ДЕЗ. Профессиональная дезинфекция, дератизация и дезинсекция</title>
-		<link rel="shortcut icon" href="src/logo_bug.svg">
-		<link rel="preconnect" href="https://fonts.googleapis.com">
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link
-			href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-			rel="stylesheet">
-		<link rel="stylesheet" href="css/bootstrap.css">
-		<link rel="stylesheet" href="css/style.css">
-	</head>
-	<script type="module" src="js/main.js"></script>
+
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<title>Калинка-ДЕЗ. Профессиональная дезинфекция, дератизация и дезинсекция</title>
+	<link rel="shortcut icon" href="src/logo_bug.svg">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link
+		href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+		rel="stylesheet">
+	<link rel="stylesheet" href="css/bootstrap.css">
+	<link rel="stylesheet" href="css/style.css">
+</head>
+<script type="module" src="js/main.js"></script>
 
 <body id="sertificats">
 	<custom-header></custom-header>
 
 	<section class="section sertificats-section">
-<div class="container container-fluid">
-	<h2 class="title">Сертификаты на производимые нами работы</h2>
-	<div class="sertificats row">
-			<div class="sertificats ellipse"></div>
-		<div class="sertificats-inner col-lg-4 col-md-12">		
-<div class="sertificats-content">
-	<p>Санитарно-эпидемиологическое заключение 55.99.25.000.М.000389.09.04 от 07/09/2004
-(по Московской области)</p>
-</div>
-<div class="sertificats-img sert-1  col-lg-4 col-md-12"></div>
-</div>
-<div class="sertificats-inner col-lg-4 12 col-md-12">
-<div class="sertificats-content">
-	<p>Санитарно-эпидемиологическое заключение 77.01.16.000.М.424.01.06 от 16/01/2006 (по г.Москве)</p>
-</div>
-<div class="sertificats-img sert-2"></div></div>
+		<div class="container container-fluid">
+			<h2 class="title">Сертификаты на производимые нами работы</h2>
+			<div class="sertificats row">
+				<div class="sertificats ellipse"></div>
+				<div class="sertificats-inner col-lg-4 col-md-12">
+					<div class="sertificats-content">
+						<p>Санитарно-эпидемиологическое заключение 55.99.25.000.М.000389.09.04 от 07/09/2004
+							(по Московской области)</p>
+					</div>
+					<a href="#" data-bs-toggle="modal" data-bs-target="#sert-1">
+						<div class="sertificats-img sert-1 col-lg-4 col-md-12"></div>
+					</a>
 
-<div class="sertificats-inner col-lg-4 12 col-md-12">
-<div class="sertificats-content">
-	<p>Санитарно-эпидемиологическое заключение 77.01.16.000.М.004318.06.07 от 26/06/2007 (по г.Москве)</p>
-</div>
-<div class="sertificats-img sert-3"></div>
-</div>
-		
-	</div>
-</div>
+				</div>
+				<div class="sertificats-inner col-lg-4 12 col-md-12">
+					<div class="sertificats-content">
+						<p>Санитарно-эпидемиологическое заключение 77.01.16.000.М.424.01.06 от 16/01/2006 (по г.Москве)</p>
+					</div>
+					<a href="#" data-bs-toggle="modal" data-bs-target="#sert-2">
+					<div class="sertificats-img sert-2"></div>
+				</a>
+				</div>
+
+				<div class="sertificats-inner col-lg-4 12 col-md-12">
+					<div class="sertificats-content">
+						<p>Санитарно-эпидемиологическое заключение 77.01.16.000.М.004318.06.07 от 26/06/2007 (по г.Москве)</p>
+					</div>
+					<a href="#" data-bs-toggle="modal" data-bs-target="#sert-3">
+					<div class="sertificats-img sert-3"></div>
+				</a>
+				</div>
+
+			</div>
+		</div>
 
 	</section>
 
@@ -57,9 +66,58 @@
 	<custom-dez></custom-dez>
 	<custom-footer></custom-footer>
 
+<!-- Модальное окно сертификат 1-->
+	<div class="modal fade" id="sert-1" tabindex="-1">
+		<div class="modal-dialog modal-dialog-scrollable modal-fullscreen modal-fullscreen-sm-down">
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
+				</div>
+				<div class="modal-body modal-sert">
+					<div class="full-sert modal-sert-1 col-xxl-5 col-lg-6 col-sm-9 col-12"></div>
+					<!-- <img class="modal-sert" src="src/img/full_sert_1 55.99.25.000.М.000389.09 1.jpg" alt=""> -->
+				</div>
+			</div>
+		</div>
+	</div>
+<!-- /Модальное окно сертификат 1-->
+
+<!-- Модальное окно сертификат 2-->
+<div class="modal fade" id="sert-2" tabindex="-1">
+	<div class="modal-dialog modal-dialog-scrollable modal-fullscreen modal-fullscreen-sm-down">
+		<div class="modal-content">
+			<div class="modal-header">
+				<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
+			</div>
+			<div class="modal-body modal-sert">
+				<div class="full-sert modal-sert-2 col-xxl-5 col-lg-6 col-sm-9 col-12"></div>
+			</div>
+		</div>
+	</div>
+</div>
+<!-- /Модальное окно сертификат 2-->
+
+<!-- Модальное окно сертификат 3-->
+<div class="modal fade" id="sert-3" tabindex="-1">
+	<div class="modal-dialog modal-dialog-scrollable modal-fullscreen modal-fullscreen-sm-down">
+		<div class="modal-content">
+			<div class="modal-header">
+				<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
+			</div>
+			<div class="modal-body modal-sert">
+				<div class="full-sert modal-sert-3 col-xxl-5 col-lg-6 col-sm-9 col-12"></div>
+			</div>
+		</div>
+	</div>
+</div>
+<!-- /Модальное окно сертификат 3-->
+
 	<script type="module" src="js/smoothscroll.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/smoothscroll/1.4.10/SmoothScroll.min.js"
 		integrity="sha256-huW7yWl7tNfP7lGk46XE+Sp0nCotjzYodhVKlwaNeco=" crossorigin="anonymous"></script>
+	<script src="js/bootstrap.bundle.min.js"></script>
+
 	<script type="module" src="js/script.js"></script>
 </body>
+
 </html>
