замена папки src на img + мелкие правки

--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Калинка-ДЕЗ. Профессиональная дезинфекция, дератизация и дезинсекция</title>
-	<link rel="shortcut icon" href="src/logo_bug.svg">
+	<link rel="shortcut icon" href="img/logo_bug.svg">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link
@@ -15,11 +15,11 @@
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" href="css/style.css">
 </head>
-<script type="module" src="js/main.js"></script>
 
 
 
 <body id="aboutPage">
+	<script type="module" src="js/main.js"></script>
 	<custom-header></custom-header>
 
 	<main>
