--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Калинка-ДЕЗ. Профессиональная дезинфекция, дератизация и дезинсекция</title>
-	<link rel="shortcut icon" href="src/logo_bug.svg">
+	<link rel="shortcut icon" href="img/logo_bug.svg">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link
@@ -45,13 +45,13 @@
 						</p>
 						<a href="https://xn--80aumx.xn--p1ai" target="_blank">
 							<div>
-								<img class="logo-intro" src="src/logo_akfo.svg" alt="">
+								<img class="logo-intro" src="img/logo_akfo.svg" alt="">
 							</div>
 						</a>
 
 						<a href="https://www.nod.su" target="_blank">
 							<div>
-								<img class="logo-intro" src="src/logo_nod.svg" alt="">
+								<img class="logo-intro" src="img/logo_nod.svg" alt="">
 							</div>
 
 						</a>
@@ -131,7 +131,7 @@
 								<div class="slider-item">
 									<div class="slider-cover"></div>
 									<div class="slider-img">
-										<img src="src/img/news_1.jpg" alt="">
+										<img src="img/news_1.jpg" alt="">
 									</div>
 									<div class="slider-news">
 										<h4 class="title">награждены</h4>
@@ -146,7 +146,7 @@
 								<div class="slider-item">
 									<div class="slider-cover"></div>
 									<div class="slider-img">
-										<img src="src/img/news_2.jpg" alt="">
+										<img src="img/news_2.jpg" alt="">
 									</div>
 									<div class="slider-news">
 										<h4 class="title">опасность насекомых</h4>
@@ -160,7 +160,7 @@
 								<div class="slider-item">
 									<div class="slider-cover"></div>
 									<div class="slider-img">
-										<img src="src/img/news_3.jpg" alt="">
+										<img src="img/news_3.jpg" alt="">
 
 									</div>
 									<div class="slider-news">
@@ -190,7 +190,7 @@
 				<div class="partners">
 
 					<div class="partner-logo">
-						<img class="logo-akfo" src="src/logo_akfo_1.svg" alt="">
+						<img class="logo-akfo" src="img/logo_akfo_1.svg" alt="">
 					</div>
 
 					<div class="partner-logo">
@@ -200,11 +200,11 @@
 					</div>
 
 					<div class="partner-logo">
-						<img class="logo-5ka" src="src/logo_5ka.svg" alt="">
+						<img class="logo-5ka" src="img/logo_5ka.svg" alt="">
 					</div>
 
 					<div class="partner-logo vkusvill">
-						<img class="logo-vkusvill" src="src/img/Vkusvill_textlogo_2021.svg" alt="">
+						<img class="logo-vkusvill" src="img/Vkusvill_textlogo_2021.svg" alt="">
 					</div>
 
 					<div class="partner-logo">
@@ -222,7 +222,7 @@
 					</div><!-- /ashan-logo -->
 
 					<div class="partner-logo">
-						<img class="logo-nod" src="src/nod_logo 1.svg" alt="">
+						<img class="logo-nod" src="img/nod_logo 1.svg" alt="">
 					</div>
 				</div>
 			</div>
