--- a/sertificats.html
+++ b/sertificats.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Калинка-ДЕЗ. Профессиональная дезинфекция, дератизация и дезинсекция</title>
-	<link rel="shortcut icon" href="src/logo_bug.svg">
+	<link rel="shortcut icon" href="img/logo_bug.svg">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link
@@ -14,10 +14,14 @@
 		rel="stylesheet">
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" href="css/style.css">
+	<script src="https://code.jquery.com/jquery-3.6.1.min.js"
+	integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous" defer></script>
+<script src="https://cdn.jsdelivr.net/npm/jquery.maskedinput@1.4.1/src/jquery.maskedinput.js" defer></script>
+
 </head>
-<script type="module" src="js/main.js"></script>
 
 <body id="sertificats">
+	<script type="module" src="js/main.js"></script>
 	<custom-header></custom-header>
 
 	<section class="section sertificats-section">
@@ -70,12 +74,11 @@
 	<div class="modal fade" id="sert-1" tabindex="-1">
 		<div class="modal-dialog modal-dialog-scrollable modal-fullscreen modal-fullscreen-sm-down">
 			<div class="modal-content">
-				<div class="modal-header">
+				<div class="modal-header modal-header-sert">
 					<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
 				</div>
 				<div class="modal-body modal-sert">
-					<div class="full-sert modal-sert-1 col-xxl-5 col-lg-6 col-sm-9 col-12"></div>
-					<!-- <img class="modal-sert" src="src/img/full_sert_1 55.99.25.000.М.000389.09 1.jpg" alt=""> -->
+					<div class="full-sert sert-1 col-xxl-5 col-lg-6 col-sm-9 col-12"></div>
 				</div>
 			</div>
 		</div>
@@ -86,11 +89,11 @@
 <div class="modal fade" id="sert-2" tabindex="-1">
 	<div class="modal-dialog modal-dialog-scrollable modal-fullscreen modal-fullscreen-sm-down">
 		<div class="modal-content">
-			<div class="modal-header">
+			<div class="modal-header modal-header-sert">
 				<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
 			</div>
 			<div class="modal-body modal-sert">
-				<div class="full-sert modal-sert-2 col-xxl-5 col-lg-6 col-sm-9 col-12"></div>
+				<div class="full-sert sert-2 col-xxl-5 col-lg-6 col-sm-9 col-12"></div>
 			</div>
 		</div>
 	</div>
@@ -101,11 +104,11 @@
 <div class="modal fade" id="sert-3" tabindex="-1">
 	<div class="modal-dialog modal-dialog-scrollable modal-fullscreen modal-fullscreen-sm-down">
 		<div class="modal-content">
-			<div class="modal-header">
+			<div class="modal-header modal-header-sert">
 				<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
 			</div>
 			<div class="modal-body modal-sert">
-				<div class="full-sert modal-sert-3 col-xxl-5 col-lg-6 col-sm-9 col-12"></div>
+				<div class="full-sert sert-3 col-xxl-5 col-lg-6 col-sm-9 col-12"></div>
 			</div>
 		</div>
 	</div>
