--- a/services.html
+++ b/services.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 		<title>Калинка-ДЕЗ. Профессиональная дезинфекция, дератизация и дезинсекция</title>
-		<link rel="shortcut icon" href="src/logo_bug.svg">
+		<link rel="shortcut icon" href="img/logo_bug.svg">
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link
@@ -14,9 +14,10 @@
 		<link rel="stylesheet" href="css/bootstrap.css">
 		<link rel="stylesheet" href="css/style.css">
 	</head>
+	
+	<body>
 	<script type="module" src="js/main.js"></script>
-
-<body>
+	
 	<custom-header></custom-header>
 
 	<section class="section intro-services">
